# quantitative-trading-system

./: .gitignore  QUANT_FRONTEND_PROMPT.md  main.py  requirements.txt
api/: auth.py  backtest_routes.py  connection_manager.py  dependencies.py  error_handler.py  feature_routes.py  middleware.py  perf_routes.py  routes.py  utils.py  websocket_manager.py
api/active/: README.md  (+1 more)
core/: adaptive_factor_combiner.py  adaptive_rebalance_scheduler.py  adaptive_strategy.py  async_utils.py  attribution_engine.py  backtest.py  black_litterman.py  black_litterman_ic.py  cache.py  chip_distribution.py  config.py  cross_sectional_ranker.py  data_bundle_cache.py  data_fetcher.py  database.py  duckdb_analytics.py  engine_polars.py  event_bus.py  events.py  execution_engine.py  factor_decay_detector.py  factor_lifecycle_orchestrator.py  factor_pipeline.py  factor_validity.py  feature_engineer.py  gateway.py  indicators.py  indicators_numba.py  json_utils.py  logger.py  market_data.py  market_detector.py  memory.py  memory_guard.py  metrics.py  models.py  money_flow.py  monte_carlo_var.py  news_engine.py  paper_engine.py  (+26 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend-v2/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
libs/rust-core/: Cargo.toml
libs/rust-core/src/: lib.rs  lockfree.rs  mempool.rs  zerocopy.rs
proto/: backtest.proto  common.proto  market_data.proto  order.proto  portfolio.proto  risk.proto  strategy.proto
services/market-data-engine/: Cargo.toml  Dockerfile  build.rs
services/market-data-engine/src/: lib.rs  main.rs  orderbook.rs  quote.rs  server.rs  snapshot.rs
services/order-engine/: Cargo.toml  Dockerfile  build.rs
services/order-engine/src/: engine.rs  idempotency.rs  lib.rs  main.rs  order.rs  router.rs
services/order-engine/src/fix/: mod.rs  parser.rs  session.rs
services/risk-engine/: Cargo.toml  Dockerfile  build.rs
services/risk-engine/src/: check.rs  engine.rs  lib.rs  limits.rs  main.rs  metrics.rs
static/: index.html
tests/: conftest.py  test_adaptive_factor_combiner.py  test_adaptive_rebalance_scheduler.py  test_adaptive_strategy.py  test_api.py  test_api_endpoints.py  test_async_write_queue.py  test_attribution_engine.py  test_backtest_store.py  test_black_litterman_ic.py  test_blotter.py  test_cache_lfu.py  test_circuit_breaker.py  test_comprehensive.py  test_dashboard_integration.py  test_data_bundle_cache.py  test_data_fetcher_async.py  test_di_injection.py  test_duckdb_security.py  test_etag_cache.py  test_event_bus.py  test_event_driven_backtest.py  test_execution_algorithms.py  test_execution_engine.py  test_factor_decay_detector.py  test_factor_lifecycle_orchestrator.py  test_factor_validity.py  test_genesis_cycle2.py  test_genesis_gen3.py  test_genesis_n1_fixes.py  test_market_data.py  test_memory_guard.py  test_metrics.py  test_models.py  test_money_flow.py  test_paper_engine.py  test_per_ip_rate_limit.py  test_perf_refactor.py  test_pit_db.py  test_regime_weight_tracker.py  (+7 more)
(+326 files in other folders)
