[package]
name = "quantcore-core"
version = "0.1.0"
edition = "2021"
description = "QuantCore shared core library — memory pool, lock-free structures, zero-copy utilities"

[dependencies]
crossbeam-channel = "0.5"
dashmap = "6"
parking_lot = "0.12"
bytes = "1"
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

[lib]
name = "quantcore_core"
path = "src/lib.rs"
