[package]
name = "quantcore-market-data"
version = "0.1.0"
edition = "2021"
description = "QuantCore Market Data Engine - Zero-copy, lock-free tick processing"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"
crossbeam-channel = "0.5"
dashmap = "6"
parking_lot = "0.12"
bytes = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
ringbuf = "0.4"
memmap2 = "0.9"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "market-data-server"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
