[package]
name = "quantcore-order-engine"
version = "0.1.0"
edition = "2021"
description = "QuantCore Order Engine - Institutional-grade order management system"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"
dashmap = "6"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ringbuf = "0.4"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "order-engine-server"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
