[package]
name = "quantcore-risk-engine"
version = "0.1.0"
edition = "2021"
description = "QuantCore Risk Engine - Institutional-grade real-time risk management"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"
dashmap = "6"
parking_lot = "0.12"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "risk-engine-server"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
